--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -45,9 +45,7 @@
 						</div>
 							<div class="info mdl-card__supporting-text">
 								<h5>About</h5>
-								<p>A casual but classy locale serving authentic fare. <br>
-									Locals and travelers alike recommend this place. <br>
-									Not Beyonce's favorite restaurant, but it could be...<br>
+								<p>{{user.rest.about}}
 								</p>
 								<h5>Location</h5>
 								<p>{{user.rest.address}}<br>
