--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -40,6 +40,9 @@
 			<div class="split left">
 				<div class="about-container">
 					<div class="about-card mdl-card mdl-shadow--8dp">
+					{% if  user.rest.profile_pic %}
+					<img src="{{ user.rest.profile_pic.url}}" width=200 height=200 class="rounded-circle">
+					{% endif %}
 						<div class="about-card-title mdl-card__title">
 							<h3>{{user.rest.name_of_restaurant}}</h3>
 						</div>
