--- a/food_redistribution/accounts/static/accounts/css/profile.css
+++ b/food_redistribution/accounts/static/accounts/css/profile.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://images.unsplash.com/photo-1606021511779-aae22948af3e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=580&q=80');
+  /*background-image: url('https://images.unsplash.com/photo-1606021511779-aae22948af3e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=580&q=80');*/
   background-repeat: no-repeat;
   background-size: 50% 100%;
   background-color: rgba(0,0,0,0.8);
