fixed bugs with posting food availability

--- a/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
@@ -4,7 +4,7 @@
     <h2>{{f.author.username}}</h2>
         <p>{{f.food_available}} meals</p>
         <p>{{f.description}}</p>
-        <p>{{f.available_till}}</p>
+        <p>Food available till: {{f.available_till}}</p>
     <br>
 
     {% endfor %}
