--- a/food_redistribution/yelp_search/templates/yelp_search/search.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/search.html
@@ -1,18 +1,58 @@
 {% extends 'yelp_search/base.html' %}
 
 {% block home %}
-<a class="navbar-brand" href="#">Search</a>
 {% endblock %}
 
+<!--
 {% block form %}
 <form class="form-inline my-2 my-lg-0" method="POST">
   {% csrf_token %}
 <input class="form-control mr-sm-2" type="search" placeholder="Search Location" name = "searched" required="required">
 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 </form>
-{% endblock %}
+{% endblock %}-->
 
 {% block content %}
+
+
+<div class="row">
+  {% if data %}
+    {% for d in data%}
+    <div class="searchresults">
+      <div class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand" style="background: linear-gradient(to bottom, rgba(255, 255, 255, 0.20), rgba(255, 255, 255, 0.80)), url('{{d.image_url}}') center / cover;">
+          <h2 class="mdl-card__title-text">{{d.name}}</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+          {% if d.phone in in_database %}
+            <h5 style="color:green" class="card-title">In our database!</h5>
+            {% if d.meals_available %}
+              <p class="card-text" style="color:green"> {{d.meals_available}} meals available</p>
+              {% endif %}
+          {% endif %}
+          Phone: {{d.display_phone}}<br>
+          {{d.categories.title}}
+        </div>
+        <!--<div class="mdl-card__actions mdl-card--border">
+          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            View Updates
+          </a>
+        </div>-->
+      </div>
+    </div>
+    {% endfor %}
+  {% else %}
+    <h3>Location Not Found</h3>
+  {% endif %}
+</div>
+{% if in_database %}
+  {% for i in in_database%}
+    <h5 class="card-title">{{i.name}}</h5>
+  {% endfor %}
+{% endif %}
+{% endblock %}
+
+<!--
     <div class="row">
       {% if data %}
         {% for d in data%}
@@ -32,17 +72,17 @@
                     {% endif %}
                     <h5 class="card-title">{{d.name}}</h5>
                     <p class="card-text">Phone: {{d.display_phone}}</p>
-      
 
-                    
-                    <!--<p class="card-text">{{d.categories.title}}</p>-->
+
+
+                    <p class="card-text">{{d.categories.title}}</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>  
+      </div>
     {% endfor %}
   {% else %}
     <h3>Location Not Found</h3>
@@ -55,7 +95,4 @@
   {% endif %}
 
 
-  </div>
-
-
-{% endblock %}
+  </div>-->
