--- a/food_redistribution/cal/templates/cal/base.html
+++ b/food_redistribution/cal/templates/cal/base.html
@@ -22,7 +22,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   <!-- Material Design javascript --->
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <title>Calendar</title>
@@ -31,7 +31,7 @@
 
   <!--<h1 class="title">{% block title %}{% endblock %}</h1>
   <hr>-->
-  {%  include 'cal/calnav.html' %}
+  {%  include 'yelp_search/searchnav.html' %}
 
   {% block content %}
   {% endblock %}
