--- a/food_redistribution/accounts/templates/accounts/updateprofile.html
+++ b/food_redistribution/accounts/templates/accounts/updateprofile.html
@@ -1,10 +1,23 @@
-<!-- templates/userprofile/profile.html -->
+{% load static %}
 {% block content %}
-{%  include 'accounts/newnavbar.html' %}
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  	<link rel="stylesheet" href="{% static 'accounts/css/profile.css' %}"/>
+    <link rel="stylesheet" href="{% static 'accounts/css/update-prof.css' %}"/>
+  	<link rel="stylesheet" href="{% static 'accounts/css/material.min.css' %}"/>
+  	<link rel="stylesheet" href="{% static 'accounts/css/newnav.css' %}">
+  	<link rel="preconnect" href="https://fonts.googleapis.com">
+  	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  	<link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
 
+  	<!-- Material Design javascript --->
+  	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</head>
+{%  include 'accounts/newnavbar.html' %}
+
+<!--
 <form method = "POST" enctype="multipart/form-data">
     {% csrf_token %}
           {{user.username}}'s Profile Info<br>
@@ -16,7 +29,50 @@
     <button> Update Profile!</button>
 
 
-</form>
+</form>-->
 
-
+<div class="screen">
+  <div class="login-container">
+    <div class="login-card mdl-card mdl-shadow--8dp">
+      <div class="login-card-title">
+        <h4>Edit Profile</h4>
+      </div>
+      <div class="horizontal">
+        <!--<div class="spacer1"></div>-->
+        <div class="user-pass-form mdl-card__supporting-text">
+          <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" id="id_username" name="username">{{form.username}}</input>
+              <label class="mdl-textfield__label" for="id_username" placeholder="USERNAME">{{user.username}}</label>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" id="id_name_of_restaurant" name="name_of_restaurant">{{form.name_of_restaurant}}</input>
+              <label class="mdl-textfield__label" for="id_name_of_restaurant">{{user.rest.name_of_restaurant}}</label>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" id="id_phone" name="phone">{{form.phone}}</input>
+              <label class="mdl-textfield__label" for="id_phone">{{user.phone}}</label>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" id="id_address" name="address">{{form.address}}</input>
+              <label class="mdl-textfield__label" for="id_address">{{user.rest.address}}</label>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" id="id_phone" name="phone">{{form.phone}}</input>
+              <label class="mdl-textfield__label" for="id_phone">{{user.rest.phone}}</label>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input type="file" name="profile_pic" accept="image/*" id="id_profile_pic"></input>
+              <label class="mdl-textfield__label" for="id_profile_pic">PROFILE PICTURE</label>
+            </div>
+            <div class="create-btn">
+              <input class="create mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit" value="Update Profile">
+            </div>
+          </form>
+        </div> <!-- user-pass-form -->
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
