--- a/food_redistribution/yelp_search/templates/yelp_search/searchnav.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/searchnav.html
@@ -42,7 +42,7 @@
               <i class="material-icons">search</i>
             </label>
             <div class="mdl-textfield__expandable-holder">
-              <input class="mdl-textfield__input" type="text" id="search-field" name="searched">
+              <input class="mdl-textfield__input" type="text" id="search-field" name="searched" placeholder="SEARCH">
             </div>
         </form>
         </div>
