more styling, made view event look nice

--- a/food_redistribution/accounts/templates/accounts/blogposts/navbar.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/navbar.html
@@ -6,7 +6,7 @@
           <div class="mdl-layout__header-row">
             {% if user.is_authenticated %}
             <span class="android-title mdl-layout-title">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="">Welcome, {{user.name_of_restaurant}}</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="">Welcome, {{user.username}}</a>
             </span>
             {% endif %}
         <!-- Add spacer, to align navigation to the right in desktop -->
