--- a/food_redistribution/cal/templates/cal/create_event.html
+++ b/food_redistribution/cal/templates/cal/create_event.html
@@ -1,10 +1,12 @@
 {% extends 'cal/base.html' %}
+{% load static %}
 
 {% block title %}
 Event
 {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'cal/css/create-event.css' %}"/>
 <!--
 <div class="clearfix">
   <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Calendar </a>
