fixed navbar login and profile pic update for foodredis

--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -20,6 +20,11 @@
 {% if user.rest.profile_pic %}
 
 <body style="background-image: url('{{ user.rest.profile_pic.url }}');">
+{% endif %}
+{% if user.foodredis.profile_pic %}
+
+<body style="background-image: url('{{ user.foodredis.profile_pic.url }}');">
+
 	{% else %}
 
 	<body
