--- a/food_redistribution/accounts/templates/accounts/newnavbar.html
+++ b/food_redistribution/accounts/templates/accounts/newnavbar.html
@@ -20,7 +20,11 @@
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:add-post' %}">Add post</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'cal:calendar' %}">Calendar</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'food_avail:view_food_avail' %}">Food Availability</a>
-            <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout' %}">Log out</a>
+              {% if user.rest %}
+                <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout' %}">Log out</a>
+              {% else %}
+              <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout2' %}">Log out</a>
+              {% endif %}
             {% else %}
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:about' %}">About</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="">FAQ</a>
