--- a/food_redistribution/accounts/templates/accounts/blogposts/navbar.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/navbar.html
@@ -4,10 +4,9 @@
       <div class="">
         <div class="gradient-navbar">
           <div class="mdl-layout__header-row">
+            <!-- Title -->
             {% if user.is_authenticated %}
-            <span class="android-title mdl-layout-title">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="">Welcome, {{user.username}}</a>
-            </span>
+              <span class="mdl-typography--text-uppercase">Welcome, {{user.username}}</span>
             {% endif %}
         <!-- Add spacer, to align navigation to the right in desktop -->
         <div class="android-header-spacer mdl-layout-spacer"></div>
