changed functions to class based views

--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -72,7 +72,7 @@
 					<a href="updateprofile/"
 						class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Edit profile</a>
 					{% if profile.res %}
-							<a href="{% url 'food_avail:food_avail' %}"
+							<a href="{% url 'food_avail:post_food_avail' %}"
 								class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Post Food
 								Availability</a>
 					{% else %}
