logout redirects fixed

--- a/food_redistribution/cal/templates/cal/base.html
+++ b/food_redistribution/cal/templates/cal/base.html
@@ -32,7 +32,7 @@ background-size: cover;">
 
   <!--<h1 class="title">{% block title %}{% endblock %}</h1>
   <hr>-->
-  {%  include 'yelp_search/searchnav.html' %}
+  {%  include 'accounts/newnavbar.html' %}
 
   {% block content %}
   {% endblock %}
