--- a/food_redistribution/yelp_search/templates/yelp_search/base.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/base.html
@@ -21,7 +21,7 @@
 <body>
 
  
-  {%  include 'yelp_search/searchnav.html' %}
+  {%  include 'accounts/newnavbar.html' %}
 
   {% block content %}
   {% endblock %}
