--- a/food_redistribution/accounts/templates/accounts/blogposts/navbar.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/navbar.html
@@ -1,14 +1,14 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static '/accounts/css/newnav.css' %}">
+<link rel="stylesheet" href="{% static 'accounts/css/newnav.css' %}">
       <div class="">
         <div class="gradient-navbar">
           <div class="mdl-layout__header-row">
+            <!-- Title -->
             {% if user.is_authenticated %}
-            <span class="android-title mdl-layout-title">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="">Welcome, {{user.username}}</a>
-            </span>
+              <span class="mdl-typography--text-uppercase">Welcome, {{user.username}}</span>
             {% endif %}
+
         <!-- Add spacer, to align navigation to the right in desktop -->
         <div class="android-header-spacer mdl-layout-spacer"></div>
         <!-- Navigation -->
@@ -20,7 +20,11 @@
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:add-post' %}">Add post</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'cal:calendar' %}">Calendar</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'food_avail:view_food_avail' %}">Food Availability</a>
-            <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout' %}">Log out</a>
+              {% if user.rest %}
+                <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout' %}">Log out</a>
+              {% else %}
+              <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout2' %}">Log out</a>
+              {% endif %}
             {% else %}
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:about' %}">About</a>
             <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="">FAQ</a>
